# AugmentedRealityCpp

./: .gitattributes  .gitignore  .gitkeep  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  Class Diagram.md  Readme.md  TODO.md  dependencies.sh  main.cpp  systemLinuxDependencies.sh  vcpkg.json  vcpkg.linux.json  vcpkg.windows.json
include/: AugmentedReality.h  Camera.h  Colmap.hpp  ConfigManager.h  GLMath.h  Object.hpp  OpenCVManipulations.hpp  OpenGLManipulations.hpp  ShaderOperations.h
include/glad/: glad.h
models/: Cubo.blend  Cubo.blend1  Cubo.mtl  CuboaoCubo.blend  Plane_with_image.blend  Plane_with_image.blend1  Plane_with_image.mtl  Plano.mtl  plane2-G15.mtl
resources/: config.yaml  exhaustive_matcher.ini  feature_extractor.ini  fragmentShader.glsl  image_undistorter.ini  mapper.ini  patch_match_stereo.ini  poisson_mesher.ini  stereo_fusion.ini  vertexShader.glsl
src/: AugmentedReality.cpp  Camera.cpp  Colmap.cpp  ConfigManager.cpp  GLMath.cpp  Object.cpp  OpenCVManipulations.cpp  OpenGLManipulations.cpp  ShaderOperations.cpp  glad.c
